--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 @media (prefers-color-scheme: dark) {
-    body {
-        color:#fff;
-        background:#333333
-    }
+  body {
+    color: #fff;
+    background: #101010;
+  }
 }
