--- a/main.css
+++ b/main.css
@@ -26,3 +26,13 @@
   overflow: hidden;
   background-color: #121212;
 }
+
+.scrollable {
+            width: 300px;
+            height: 150px;
+            overflow-y: auto;
+            border: 1px solid #ccc;
+            padding: 10px;
+            font-family: Arial, sans-serif;
+            background-color: #151515;
+        }
